# dDCA-Python

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  ddca.py  pyproject.toml  setup.py
DDCA-Test/: README.md  bd-ddca-test.py  bd-ddca_v0.1.py  bd-ddca_v0.2.py  bd-ddca_v0.3.py  bd-ddca_v1.0.py  ddca.py
docs/: REVIEW_NOTES.md
tests/: test_ddca.py
